src/objects/University_Course_Request__c.object
<CustomObject>
    <fields>
        <fullName>AE_Mobile_Phone__c</fullName>
        <formula>AE_Name__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active internal users can be selected.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active internal users can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>University_Course_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_Phone__c</fullName>
        <formula>AE_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Message_For_Reminder__c</fullName>
        <defaultValue>&quot;Please bring a laptop and mouse.&quot;</defaultValue>
        <label>Additional Message For Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_with_Catering_Required__c</fullName>
        <inlineHelpText>North America only:
Do you require assistance with catering.</inlineHelpText>
        <label>Assistance with Catering Required (NA)?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assistance_with_Venue_Required__c</fullName>
        <inlineHelpText>North America only:
A venue location is required before a course can be posted in Nimble University for student registrations. If yes, please provide three preferred locations. If no, please provide the venue name, address and room capacity.</inlineHelpText>
        <label>Assistance with Venue Required (NA)?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCASelect_Class_Region__c</fullName>
        <formula>&quot;CCASelect: &quot; &amp;  TEXT(Class_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCASelect: Class Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catering_Notes__c</fullName>
        <label>Catering Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <formula>IF( ISPICKVAL(Assistance_with_Venue_Required__c ,&quot;No&quot;),
(TEXT(YEAR(DATEVALUE(Desired_Course_Date_Start_Time__c )))+ TEXT(MONTH(DATEVALUE(Desired_Course_Date_Start_Time__c )))+ TEXT(DAY(DATEVALUE(Desired_Course_Date_Start_Time__c )))+
Venue_Airport_Code__c ),
(TEXT(YEAR(DATEVALUE(Desired_Course_Date_Start_Time__c )))+ TEXT(MONTH(DATEVALUE(Desired_Course_Date_Start_Time__c )))+ TEXT(DAY(DATEVALUE(Desired_Course_Date_Start_Time__c )))+
Venue_Airport_Code__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_ID_From_LMS__c</fullName>
        <label>Class ID (From LMS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <formula>IF( ISPICKVAL(Assistance_with_Venue_Required__c ,&quot;No&quot;),
(TEXT(YEAR(DATEVALUE(Desired_Course_Date_Start_Time__c )))&amp; TEXT(MONTH(DATEVALUE(Desired_Course_Date_Start_Time__c )))&amp; TEXT(DAY(DATEVALUE(Desired_Course_Date_Start_Time__c )))&amp; 
 Venue_Airport_Code__c &amp;
&quot; - &quot;+
 Course_Code__c &amp;
&quot; - (&quot;+
Venue_City__c &amp;
&quot;, &quot;+
 IF(NOT(ISBLANK( Venue_State__c)), Venue_State__c, Venue_Country__c) &amp;
&quot;)&quot;),
(TEXT(YEAR(DATEVALUE(Desired_Course_Date_Start_Time__c )))&amp; TEXT(MONTH(DATEVALUE(Desired_Course_Date_Start_Time__c )))&amp; TEXT(DAY(DATEVALUE(Desired_Course_Date_Start_Time__c )))&amp; 
 Venue_Airport_Code__c &amp;
&quot; - &quot;+
 Course_Code__c &amp;
&quot; - (&quot;+
  Requester_City__c  &amp;
&quot;, &quot;+
IF(NOT(ISBLANK( Requester_State__c  )), Requester_State__c  , Requester_Country__c)  &amp;
&quot;)&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Region__c</fullName>
        <label>Class Region</label>
        <picklist>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA North &amp; Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA South &amp; UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <inlineHelpText>PUBLIC – open to anyone who wishes to register, will be displayed on Nimble University
PRIVATE – only available to attendees with private registration link, will not be displayed on Nimble University</inlineHelpText>
        <label>Class Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>TRIM( 
LEFT( 
TEXT( Course_Requested__c ) , 
FIND(&quot;:&quot;, TEXT(Course_Requested__c))-1 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Requested__c</fullName>
        <label>Course Requested</label>
        <picklist>
            <picklistValues>
                <fullName>NTS-2001-I: Nimble Introduction and Administration</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>IF (ISPICKVAL( Assistance_with_Venue_Required__c ,&quot;No&quot;),
(&quot;Course will be held at: &quot; &amp; 
 BR()  &amp; 
 Venue_Name__c  &amp; 
 BR()  &amp; 
 Venue_Detail__c &amp;
 BR()  &amp; 
 Venue_Street__c  &amp; 
 BR()  &amp; 
 Venue_City__c  &amp; &quot;, &quot;  &amp;  Venue_State__c  &amp; &quot; &quot;  &amp;  Venue_Zip__c  &amp; 
 BR()  &amp;
 IF(NOT(ISBLANK( Venue_State__c)), &quot;&quot;, Venue_Country__c) &amp;
 BR()  &amp; 
 IF( Is_Private__c=&quot;TRUE&quot; ,
 &quot;(Private Class)&quot;,&quot;&quot;)),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_for_Export__c</fullName>
        <formula>IF (ISPICKVAL( Assistance_with_Venue_Required__c ,&quot;No&quot;), 
(&quot;Course will be held at: &quot; &amp; 
&quot; &quot; &amp; 
Venue_Name__c &amp; 
&quot; &quot; &amp; 
Venue_Detail__c &amp; 
&quot; &quot; &amp; 
Venue_Street__c &amp; 
&quot; &quot; &amp; 
Venue_City__c &amp; &quot;, &quot; &amp; Venue_State__c &amp; &quot; &quot; &amp; Venue_Zip__c &amp; 
&quot; &quot;  &amp;
 IF(NOT(ISBLANK( Venue_State__c)), &quot;&quot;, Venue_Country__c) &amp;
&quot; &quot; &amp; 
IF( Is_Private__c=&quot;TRUE&quot; , 
&quot;(Private Class)&quot;,&quot;&quot;)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description for Export</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Course_Date_Start_Time__c</fullName>
        <inlineHelpText>The start date/time should be 08:30 AM - 09:30 AM in the venue’s local time.</inlineHelpText>
        <label>Desired Course Date &amp; Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Desired_Course_End_Time__c</fullName>
        <formula>IF( 
OR( 
VALUE( MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440)), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440)), 12, 2 ) ) = 12 
), 
&quot;12&quot;, 
TEXT( VALUE( MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440)), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440)), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440 )), 15, 2 ) 
/*&amp; &quot;:&quot; &amp; 
MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440 )), 18, 2 )*/ 
&amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( (Desired_Course_Date_Start_Time__c +  (Session_Time_in_hrs__c-TZoffset__c)*60/1440)), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Course End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Course_Start_Date__c</fullName>
        <formula>CASE( MONTH( DATEVALUE(Desired_Course_Date_Start_Time__c ) ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
)
+ &quot; &quot; + 
TEXT(DAY(DATEVALUE(Desired_Course_Date_Start_Time__c )))+ &quot;th, &quot; +
TEXT(YEAR(DATEVALUE(Desired_Course_Date_Start_Time__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Course Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Course_Start_Time__c</fullName>
        <formula>IF(
  OR(
    VALUE( MID( TEXT(  Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440 ), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440 ), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440), 12, 2 ) ) 
   -
   IF( 
     VALUE( MID( TEXT( Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440 ), 12, 2 ) ) &lt; 12, 
     0, 
     12 
   ) 
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440 ), 15, 2 )
/*&amp; &quot;:&quot; &amp;
MID( TEXT( Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440 ), 18, 2 )*/
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( Desired_Course_Date_Start_Time__c - TZoffset__c*60/1440 ), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Course Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to prevent this request from being included in the export report</inlineHelpText>
        <label>Exclude from Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_course_size__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Expected course size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Evaluation__c</fullName>
        <formula>IF(  ISPICKVAL(Instructor_in_Training_Response__c, &quot;Confirmed&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zw&quot; , &quot;Met&quot;), 
IF( ISPICKVAL(Instructor_in_Training_Response__c, &quot;Declined&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zt&quot; , &quot;Not Met&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zv&quot;, &quot;WIP&quot;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructor in Training Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Name__c</fullName>
        <formula>Instructor_in_Training__r.FirstName &amp; &quot; &quot; &amp;  Instructor_in_Training__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructor in Training Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Problem_Details__c</fullName>
        <label>Instructor in Training Decline Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Response_Date__c</fullName>
        <label>Instructor in Training Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Response_Shadow__c</fullName>
        <formula>TEXT(Instructor_in_Training_Response__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructor in Training Response Shadow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Response__c</fullName>
        <label>Instructor in Training Response</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training_Sug_Replacement__c</fullName>
        <label>Instructor in Training Sug. Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_in_Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor in Training</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active internal users can be selected. User must be a systems engineer.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active internal users can be selected. User must be a systems engineer.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>University_Course_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Private__c</fullName>
        <formula>IF(ISPICKVAL ( Class_Type__c ,&quot;Private&quot;), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Private</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Course__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Class_Capacity__c</fullName>
        <formula>IF(NOT(ISNULL(Room_Capacity__c)), Room_Capacity__c - 5, NULL)</formula>
        <label>Maximum Class Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Person_Picking_Up__c</fullName>
        <label>Name of Person Picking Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sessions__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occurs_Weekly_Days__c</fullName>
        <formula>CASE(
  MOD( DATEVALUE( Desired_Course_Date_Start_Time__c ) - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;SU&quot;,
  1, &quot;MO&quot;,
  2, &quot;TU&quot;,
  3, &quot;WE&quot;,
  4, &quot;TH&quot;,
  5, &quot;FR&quot;, 
  &quot;SA&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occurs Weekly (Days)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_of_Person_Picking_Up__c</fullName>
        <label>Phone of Person Picking Up</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pickup_City__c</fullName>
        <label>Pickup City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Country_P__c</fullName>
        <label>Pickup Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pickup_Country__c</fullName>
        <label>Pickup Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_In_NA__c</fullName>
        <formula>IF(
 (CONTAINS( Pickup_Country__c , &quot;USA&quot;)  || 
 CONTAINS( Pickup_Country__c , &quot;United States&quot;)  ||
 CONTAINS( Pickup_Country__c , &quot;UNITED STATES&quot;)  ||
 CONTAINS( Pickup_Country__c , &quot;CANADA&quot;)  ||
 CONTAINS( Pickup_Country__c , &quot;Canada&quot;)  ||
 CONTAINS( Pickup_Country__c , &quot;CA&quot;))
,TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pickup In NA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pickup_Location_Name__c</fullName>
        <label>Pickup Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_State_P__c</fullName>
        <label>Pickup State</label>
        <picklist>
            <controllingField>Pickup_Country_P__c</controllingField>
            <picklistValues>
                <fullName>BAJRAM CURRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADRAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLEMCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 MAY ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDMILL ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT GEORGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT JOHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT MARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PAUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARISH OF SAINT PHILIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUENOS AIRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUCUMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAGATSOTNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEREVAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BURGENLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAERNTEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIEDEROESTERREICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBEROESTERREICH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALZBURG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pickup_State__c</fullName>
        <label>Pickup State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Street__c</fullName>
        <inlineHelpText>Address of where you are located 1-2 business days before the course for manual pickup</inlineHelpText>
        <label>Pickup Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Zip__c</fullName>
        <label>Pickup Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Locations__c</fullName>
        <inlineHelpText>If assistance with a venue is required (NA Only) please provide three preferred locations and note the room capacity for each location.</inlineHelpText>
        <label>Preferred Locations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Setting_Data_Details__c</fullName>
        <label>Problem Setting Data – Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projector_Required__c</fullName>
        <inlineHelpText>Do you require a projector rental at the venue for you? (We recommend you bring a projector with you if you have one.)</inlineHelpText>
        <label>Projector Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <defaultValue>&quot;PartOfRecurrence&quot;</defaultValue>
        <label>Recurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Closed_Date__c</fullName>
        <label>Registration Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Open_Date__c</fullName>
        <label>Registration Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://gm1.geolearning.com/geonext/nimblestorage/scheduledclassdetails4enroll.geo?&amp;id=&quot;&amp;Class_ID_From_LMS__c, &quot;https://gm1.geolearning.com/geonext/nimblestorage/scheduledclassdetails4enroll.geo?&amp;id=&quot;&amp;Class_ID_From_LMS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Trigger_Days__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Reminder Trigger Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Trigger_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reminder Trigger Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Trigger_Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reminder Trigger Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Setting Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Creating in LMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Evaluation__c</fullName>
        <formula>IF(  ISPICKVAL( Requested_Instructor_Response__c , &quot;Confirmed&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zw&quot; , &quot;Met&quot;), 
IF( ISPICKVAL( Requested_Instructor_Response__c , &quot;Declined&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zt&quot; , &quot;Not Met&quot;), 
IMAGE( &quot;/servlet/servlet.FileDownload?file=0158000000159Zv&quot;, &quot;WIP&quot;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Instructor Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Name__c</fullName>
        <formula>Requested_Instructor__r.FirstName &amp; &quot; &quot; &amp;  Requested_Instructor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Instructor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Problem_Details__c</fullName>
        <label>Requested Instructor Decline Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Response_Date__c</fullName>
        <label>Requested Instructor Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Response_Shadow__c</fullName>
        <formula>TEXT(Requested_Instructor_Response__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Instructor Response Shadow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Response__c</fullName>
        <label>Requested Instructor Response</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor_Sug_Replacement__c</fullName>
        <label>Requested Instructor Sug. Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please consult with your SE Manager to find an instructor</inlineHelpText>
        <label>Requested Instructor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active internal users can be selected. User must be a systems engineer and a certified instructor.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Certified_Instructor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active internal users can be selected. User must be a systems engineer and a certified instructor.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>University_Course_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_City__c</fullName>
        <label>Requester City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>